# zero2prod

./: .env  Cargo.toml  Dockerfile  Makefile.toml  docker-compose.yml
.github/workflows/: deploy.yml  general.yml
.sqlx/: query-5db1f9dfcdee685b02851f144e29d3e2726127d5a1d614880a0be89d8fa6904b.json  query-94f2d7c4cb2a37793f8f975fa3bea64ce34a682b68e5677947dff62b098968df.json
configuration/: base.yaml  production.yaml
docker/: initdb.sql
scripts/: deploy.sh  init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
