[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Oskar Wiszowty <ppwiszu@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = {version = "1", features = ["v4"]}
chrono = {version="0.4.22", default-features = false, features = ["clock"]}

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12"
