[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Oskar Wiszowty <ppwiszu@gmail.com>"]
edition = "2024"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.14"
uuid = {version = "1", features = ["v4"]}
chrono = {version="0.4.22", default-features = false, features = ["clock"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7"

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12"
